<resources>
    <string name="app_name">MealScript</string>
    <string name="welcomeScreenbtnSignup">Sign up with Email</string>
    <string name="welcomeScreenLoginText"><u>Log In</u></string>
    <string name="welcomeScreenText">Already have an account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginScreenLoginText">Log In</string>
    <string name="loginScreenWelcomeBackTxt">Great to See You Again!\nYour next delicious meal is just a tap away. Get inspired and plan your perfect menu!</string>
    <string name="loginScreenUsernameText">Username</string>
    <string name="loginScreenPasswordText">Password</string>
    <string name="loginScreenForgotPasswordText"><u>I FORGOT MY PASSWORD</u></string>
    <string name="loginScreenLoginButtonText">Login</string>
    <string name="loginScreenEmailText">Email</string>
    <string name="signupScreenSignupText">Sign Up</string>
    <string name="signupScreenRandomText">Take control of your weekly meals with our intuitive meal planning feature. Just like a well-written script, each meal is a chance to create a masterpiece in your kitchen.</string>
    <string name="signupScreenDisplayNameText">Display Name</string>
    <string name="signupScreenEmailText">Email</string>
    <string name="signupScreenPasswordText">Password</string>
    <string name="signupScreenConfirmPasswordText">Confirm Password</string>
    <string name="signupScreenSignupButtonText">Signup</string>
    <string name="mealCardAddToPlannerText">Add to Planner</string>
    <string name="Empty">"    "</string>
    <string name="DailyInsperation">Daily Inspirations</string>
    <string name="SavedMeals">Favorite meals</string>
    <string name="Desserts">Desserts Heaven</string>
    <string name="MoreYouMightLike">More You Might Like</string>
    <string name="Add">Add</string>
    <string name="Skip"><u>Skip</u></string>
    <string name="CountryOfOrigin">Country Of Origin: </string>
    <string name="Ingredients">Ingredients:</string>
    <string name="Instructions">"Instructions: "</string>
    <string name="YoutubeVideo">Youtube Video:</string>
    <string name="Categories">Categories</string>
    <string name="Countries">Countries</string>
    <string name="textForPlannerDialog">What day for this week should we add this meal to?\n</string>
    <string name="Cancel">Cancel</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="SignOut">SignOut</string>
    <string name="Backup">Backup Meals</string>
    <string name="Sync">Synchronize Meals</string>
    <string name="Name">Name</string>
</resources>