<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/circular_background_forplanner"

    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/cardHolderInPlannerDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewMealPlannerCard"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/cake2" />

        <TextView
            android:id="@+id/textViewMealNamePlannerCard"
            style="@style/myText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:fontFamily="@font/roboto_medium_italic"
            android:text="unitedkingdom"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        style="@style/myText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textForPlannerDialog"
        android:textAlignment="inherit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHolderInPlannerDialog"
        android:elevation="8dp"
         android:clipToOutline="true"



    />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroundForPlannerDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"

        android:padding="10dp"
        app:chipSpacingHorizontal="10dp"
        app:chipSpacingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView13"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="true"
            android:text="Saturday"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_background"
            app:closeIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="Sunday"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_background"
            app:closeIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="Monday"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_background"
            app:closeIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="Tuesday"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_background"
            app:closeIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="Wednesday"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_background"
            app:closeIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipThurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="Thursday"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_background"
            app:closeIconEnabled="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="Friday"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_background"
            app:closeIconEnabled="false" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/btnAddToPlanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/chipGroundForPlannerDialog"
        app:layout_constraintTop_toBottomOf="@+id/chipGroundForPlannerDialog" />

    <Button
        android:id="@+id/btnCancelPlannerCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/Cancel"
        app:layout_constraintEnd_toEndOf="@+id/chipGroundForPlannerDialog"
        app:layout_constraintTop_toTopOf="@+id/btnAddToPlanner" />

</androidx.constraintlayout.widget.ConstraintLayout>


